<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widgetParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayoutParent"
        android:contentDescription="Floating Widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <!-- this is the collapsed layout -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Collapsed Layout"
            android:id="@+id/layoutCollapsed"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:contentDescription="Customized Widget"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:id="@+id/collapsed_iv" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="Button Closed"
                android:layout_marginLeft="50dp"
                android:id="@+id/buttonClose"
                android:src="@drawable/apple"/>
        </RelativeLayout>

        <!-- This is the expanded layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:contentDescription="Expanded Layout"
            android:id="@+id/layoutExpanded"
            android:background="#a0cdd7"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/buttonSimplifiedCoding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/select_action"
                    android:layout_width="388dp"
                    android:layout_height="54dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/select_action"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#000099"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/quickLaunch"
                    android:contentDescription="Launch Apps"
                    android:layout_width="175dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/select_action"
                    android:layout_centerHorizontal="true"
                    android:text="@string/launch_apps"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/returnToApp"
                    android:contentDescription="Return to App"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:textSize="16sp"
                    android:layout_below="@+id/quickLaunch"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Current Apps:"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/instructions"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:divider="@drawable/empty_tall_divider"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <ImageView
                        android:id="@+id/button_one"
                        android:layout_width="@dimen/row_height"
                        android:layout_height="@dimen/row_height" />

                    <ImageView
                        android:id="@+id/button_two"
                        android:layout_width="@dimen/row_height"
                        android:layout_height="@dimen/row_height" />

                    <ImageView
                        android:id="@+id/button_three"
                        android:layout_width="@dimen/row_height"
                        android:layout_height="@dimen/row_height" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:divider="@drawable/empty_tall_divider"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <ImageView
                        android:id="@+id/button_four"
                        android:layout_width="@dimen/row_height"
                        android:layout_height="@dimen/row_height" />

                    <ImageView
                        android:id="@+id/button_five"
                        android:layout_width="@dimen/row_height"
                        android:layout_height="@dimen/row_height" />

                    <ImageView
                        android:id="@+id/button_six"
                        android:layout_width="@dimen/row_height"
                        android:layout_height="@dimen/row_height" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or Tap again to exit"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>