...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ConCat"
                            android:layout_width="@dimen/main_button_width"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_baseline_airplanemode_active_24"
                            android:text="Launch" />

                        <View
                            android:layout_width="16dp"
                            android:layout_height="0dp" />

                        <Button
                            android:id="@+id/customizeBtn"
                            android:layout_width="@dimen/main_button_width"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_baseline_pets_24"
                            android:text="Customize" />
                    </LinearLayout>

...
